# meteogram2zarr

./: README.md  pyproject.toml
src/meteogram2zarr/: __init__.py  cli.py  core.py
src/meteogram2zarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_core.py
