[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteogram2zarr"
version = "0.1.0"
description = "Convert COSMO-SPECS meteogram NetCDF files into one Zarr store."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dask[array]>=2024.1",
  "numcodecs>=0.12",
  "numpy>=1.26",
  "xarray>=2024.1",
  "zarr>=2.16",
]

[project.optional-dependencies]
netcdf = ["h5netcdf>=1.3", "netCDF4>=1.6"]
slurm = ["levante-slurm-utils"]
test = ["pytest>=8"]

[project.scripts]
meteogram2zarr = "meteogram2zarr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
